--- a/BLTests/BLTests.csproj
+++ b/BLTests/BLTests.csproj
@@ -56,6 +56,8 @@
   <ItemGroup>
     <Compile Include="CooperativeControllerTests\CompileCoops_Tests.cs" />
     <Compile Include="CooperativeControllerTests\CooperativeControllerSpecification.cs" />
+    <Compile Include="MetacriticControllerTests\MetacriticControllerSpecification.cs" />
+    <Compile Include="MetacriticControllerTests\CompileMeta_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreControllerTests\CompileGames_Tests.cs" />
     <Compile Include="StoreControllerTests\StartParse_Tests.cs" />
