--- a/BLTests/BLTests.csproj
+++ b/BLTests/BLTests.csproj
@@ -35,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ReturnValues">
+      <HintPath>..\..\lib\RetValue\ReturnValues.dll</HintPath>
+    </Reference>
     <Reference Include="SerializeLibra, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\serializer\SerializeLibra.dll</HintPath>
@@ -63,7 +66,6 @@
     <Compile Include="StoreControllerTests\StartParse_Tests.cs" />
     <Compile Include="StoreControllerTests\StoreControllerForTests.cs" />
     <Compile Include="StoreControllerTests\StoreControllerSpecification.cs" />
-    <Compile Include="StoreControllerTests\LoadStores_Tests.cs" />
     <Compile Include="TwitterControllerTests\TwitterControllerSpecification.cs" />
     <Compile Include="TwitterControllerTests\CompileTweets_Test.cs" />
   </ItemGroup>
