рефакторинг, корректировка возвращаемого значения

--- a/GetByNameLibrary/GetByNameLibrary.csproj
+++ b/GetByNameLibrary/GetByNameLibrary.csproj
@@ -85,16 +85,16 @@
     <Compile Include="Controllers\MetacriticController.cs" />
     <Compile Include="Metacritic\MetacriticParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stores\Directcod.cs" />
-    <Compile Include="Stores\Gamagama.cs" />
-    <Compile Include="Stores\Gamazavr.cs" />
-    <Compile Include="Stores\Igromagaz.cs" />
-    <Compile Include="Stores\Origin.cs" />
-    <Compile Include="Stores\Roxen.cs" />
-    <Compile Include="Stores\Shop1c.cs" />
-    <Compile Include="Stores\Steam.cs" />
-    <Compile Include="Stores\BaseStore.cs" />
-    <Compile Include="Stores\Yuplay.cs" />
+    <Compile Include="Stores\DirectcodParser.cs" />
+    <Compile Include="Stores\GamagamaParser.cs" />
+    <Compile Include="Stores\GamazavrParser.cs" />
+    <Compile Include="Stores\IgromagazParser.cs" />
+    <Compile Include="Stores\OriginParser.cs" />
+    <Compile Include="Stores\RoxenParser.cs" />
+    <Compile Include="Stores\Shop1cParser.cs" />
+    <Compile Include="Stores\SteamParser.cs" />
+    <Compile Include="Stores\BaseStoreParser.cs" />
+    <Compile Include="Stores\YuplayParser.cs" />
     <Compile Include="Twitter\AuthConfig.cs" />
     <Compile Include="Controllers\TwitterController.cs" />
     <Compile Include="Twitter\TwitterParser.cs" />
